# Excel2Json

./: CMakeLists.txt  Converter.cpp  Converter.h  ExcelAdapter.cpp  ExcelAdapter.h  README.md  main.cpp
example/: Example.json  Example.xlsx  Example.xml
