CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(Excel2Json)

# dependancies
SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMake" ${CMAKE_MODULE_PATH})
FIND_LIBRARY(XLSXIO_READ_LIB_DEBUG XLSXIO_READ_DEBUG)
FIND_LIBRARY(XLSXIO_READ_LIB_RELEASE XLSXIO_READ_RELEASE)
FIND_PATH(XLSXIO_INCLUDE_PATH XLSXIO_PATH)
INCLUDE_DIRECTORIES(${XLSXIO_INCLUDE_PATH})

# predefine
IF(MSVC)
ADD_DEFINITIONS("-D_CRT_SECURE_NO_WARNINGS")
ADD_DEFINITIONS("-D_CRT_NONSTDC_NO_DEPRECATE")
ADD_DEFINITIONS("-DZIP_STATIC")
ENDIF(MSVC)

SET (SRC_LIST
	ExcelAdapter.cpp
	ExcelAdapter.h
	Converter.cpp
	Converter.h
	main.cpp)

ADD_EXECUTABLE(Excel2Json ${SRC_LIST})
TARGET_LINK_LIBRARIES(Excel2Json debug ${XLSXIO_READ_LIB_DEBUG})
TARGET_LINK_LIBRARIES(Excel2Json optimized ${XLSXIO_READ_LIB_RELEASE})