CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(Excel2Json)

# dependancies
SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMake" ${CMAKE_MODULE_PATH})

FIND_LIBRARY(XLSXIO_READ_LIB XLSXIO_READ)
FIND_PATH(XLSXIO_INCLUDE_PATH XLSXIO_PATH)

FIND_LIBRARY(FREEXL_LIB FREEXL)
FIND_PATH(FREEXL_INCLUDE_PATH FREEXL_PATH)

FIND_PATH(BOOST_INCLUDE_PATH BOOST_PATH)
FIND_PATH(RAPIDJSON_INCLUDE_PATH RAPIDJSON_PATH)

INCLUDE_DIRECTORIES(${XLSXIO_INCLUDE_PATH}
			${FREEXL_INCLUDE_PATH}
			${BOOST_INCLUDE_PATH}
			${RAPIDJSON_INCLUDE_PATH})

SET (SRC_LIST
	ExcelAdapter.cpp
	ExcelAdapter.h
	Converter.cpp
	Converter.h
	main.cpp)

ADD_EXECUTABLE(Excel2Json ${SRC_LIST})
TARGET_LINK_LIBRARIES(Excel2Json ${XLSXIO_READ_LIB_DEBUG} ${FREEXL_LIB})